--- a/index.html
+++ b/index.html
@@ -27,6 +27,44 @@
         title="Bariloche, Patagonia, Argentina | Drone 4K" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen></iframe>
+    <div class="espacocima">
+        <table>
+            <thead>
+                <tr>
+                    <th>Lugar</th>
+                    <th>Nome</th>
+                    <th>Imagem do Lugar</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Noruega</td>
+                    <td ><img class="zoom" src="noruega.png" alt="Noruega"></td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Islandia</td>
+                    <td><img class="zoom" src="islandia.jpg" alt="Islandia"></td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Canadá</td>
+                    <td><img class="zoom" src="canada.jpg" alt="Canadá"></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <footer>
+        <div class="container">
+          <p>&copy; 2024 - Marco Ferrandin. Todos os direitos reservados.</p>
+          <ul class="social-icons">
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Instagram</a></li>
+          </ul>
+        </div>
+      </footer>
 </body>
 
 </html>
